--- a/src/styles/Chatbot.scss
+++ b/src/styles/Chatbot.scss
@@ -14,16 +14,16 @@
   --border-radius: 12px;
 }
 
-#root {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  width: 100vw;
-  background-color: var(--background-light);
-  padding: 2rem;
-  align-items: center;
-  justify-content: center;
-}
+// #root {
+//   display: flex;
+//   flex-direction: column;
+//   min-height: 100vh;
+//   width: 100vw;
+//   background-color: var(--background-light);
+//   padding: 2rem;
+//   align-items: center;
+//   justify-content: center;
+// }
 
 .app-name {
   margin-bottom: 2rem;
