--- a/src/styles/DiseaseDiagnosis.scss
+++ b/src/styles/DiseaseDiagnosis.scss
@@ -17,13 +17,13 @@
 .disease-diagnosis-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    // align-items: start;
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
     padding: 2rem;
     background-color: var(--background-light);
-    height: 100%;
+    // height: 100%;
 }
 
 .app-name {
