--- a/src/styles/PatientDetails.scss
+++ b/src/styles/PatientDetails.scss
@@ -32,7 +32,7 @@ $text-color: #333;
     font-size: 16px;
 
     &:hover {
-      background-color: darken($primary-color, 10%);
+      background-color: #75830d;
     }
   }
 
@@ -84,7 +84,7 @@ $text-color: #333;
       font-size: 16px;
 
       &:hover {
-        background-color: darken($primary-color, 10%);
+        background-color: #75830d;
       }
     }
   }
